@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  17 Oct 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  synfigstudio-0.61.08.ebuild:
+  Fix usage of dv useflag, fix DEPEND, cleanup
+
   23 Aug 2008; Thomas Beierlein (TomJBE) <tb@forth-ev.de> metadata.xml:
   Added USE flag description wrt GLEP 56
 
